[package]
name = "lektos"
version = "0.1.0"
edition = "2024"

[dependencies]
warc = "0.4.0"
flate2 = "1.0"
tokio = { version = "1.0", features = ["full"] }  # Required for async
scraper = "0.23.1"
ammonia = "4.1.1"
maplit = "1.0.2"
serde_json = "1.0.140"
serde={version = "1.0.219", features = ["derive"]}
gemini-rust = "0.4" 

anyhow = "1.0"
reqwest = "0.12.22"

