[package]
name = "lektos"
version = "0.1.0"
edition = "2024"

[lib]
name = "lektos"           
crate-type = ["cdylib"] 

[dependencies]
warc = "0.4.0"
flate2 = "1.0"
tokio = { version = "1.0", features = ["full"] }  
scraper = "0.23.1"
ammonia = "4.1.1"
maplit = "1.0.2"
serde_json = "1.0.140"
serde={version = "1.0.219", features = ["derive"]}
gemini-rust = "0.4" 

anyhow = "1.0"
reqwest = "0.12.22"
rayon = "1.10.0"
streaming-iterator = "0.1.9"
once_cell = "1.21.3"
regex = "1.11.1"
feed-rs = { version = "2.2.1", features = ["sanitize"] }
rss = "2.0.12"

tempfile = "3.20.0"
fjall = "2.11.2"
blake3 = "=0.1.3"
bloom = "0.2.0"
dotenv = "0.15.0"
csv = "1.3"
url = "2.5.4"
derive_more = { version = "2.0.1", features = ["display", "from"] }
qdrant-client = "1.15.0"

pyo3 = { version = "0.25.1", features = ["extension-module"] }






