[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "maturin>=1.9.2",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.12.1",
    "uvicorn>=0.33.0",
]
