[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cython>=3.1.3",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "maturin>=1.9.2",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.12.1",
    "ray[default]>=2.48.0",
    "scrapy>=2.13.3",
    "tqdm>=4.67.1",
    "uvicorn>=0.33.0",
]
